# picking_ws

picking_ws/: README.md  move_and_grasp.cpp
picking_ws/denso_gazebo/: CMakeLists.txt  package.xml
picking_ws/denso_gazebo/config/cobotta/: cobotta_control_sim.yaml  cobotta_with_cobotta_gripper_control_sim.yaml
picking_ws/denso_gazebo/config/vs087/: robot2_control_sim.yaml  vs087_test_control_sim .yaml  vs087_twin_control_sim.yaml  vs087_with_iai_gripper_control_sim.yaml  vs087_with_mhand_control_sim.yaml  vs087_with_robotiq_control_sim.yaml  vs087_with_tercero_control_sim.yaml
picking_ws/denso_gazebo/include/denso_gazebo/: model_tf_publisher.h
picking_ws/denso_gazebo/launch/cobotta/: cobotta_gazebo.launch  cobotta_room.launch  cobotta_with_cobotta_gripper_gazebo.launch
picking_ws/denso_gazebo/launch/objects/: model_tf_broadcaster.launch  spawn_HV8.launch  spawn_box.launch  spawn_four_box.launch  spawn_six_box.launch
picking_ws/denso_gazebo/launch/vs087/: denso_room.launch  denso_room_mini.launch  vs087_and_kinectv2_gazebo.launch  vs087_and_photoneo_gazebo.launch  vs087_client.launch  vs087_client_pp_demo.launch  vs087_gazebo.launch  vs087_master.launch  vs087_test.launch  vs087_test_with_tercero.launch  vs087_twin_gazebo.launch  vs087_twin_with_tercero_and_photoneo_gazebo.launch  vs087_with_iai_gripper_gazebo.launch  vs087_with_mhand2_gazebo.launch  vs087_with_mhand_and_kinectv2_gazebo.launch  vs087_with_mhand_gazebo.launch  vs087_with_robotiq_gazebo.launch  vs087_with_tercero_and_photoneo_gazebo.launch  vs087_with_tercero_gazebo.launch
picking_ws/denso_gazebo/scripts/: driver.py  listener.py
picking_ws/denso_gazebo/src/: model_tf_publisher.cpp  model_tf_publisher_node.cpp
picking_ws/denso_gazebo/urdf/cobotta/: cobotta.gazebo.macro.xacro  cobotta.gazebo.xacro  cobotta_with_cobotta_gripper.gazebo.xacro
picking_ws/denso_gazebo/urdf/objects/box/: box.gazebo.xacro  box.urdf.gazebo.xacro
picking_ws/denso_gazebo/urdf/objects/denso_parts/: HV8.gazebo.xacro  HV8.urdf.gazebo.xacro
picking_ws/denso_gazebo/urdf/sensors/: kinectv2.gazebo.xacro  phoxi_camera.gazebo.xacro
picking_ws/denso_gazebo/urdf/tools/: gzplugin_grasp_fix_2_grippers.gazebo.macro.xacro  gzplugin_grasp_fix_3_grippers.gazebo.macro.xacro
picking_ws/denso_gazebo/urdf/vs087/: robot2.gazebo.macro.xacro  vs087.gazebo.macro.xacro  vs087.gazebo.xacro  vs087_and_kinectv2.gazebo.xacro  vs087_and_photoneo.gazebo.xacro  vs087_twin.gazebo.xacro  vs087_with_iai_gripper.gazebo.xacro  vs087_with_mhand.gazebo.xacro  vs087_with_mhand2.gazebo.xacro  vs087_with_mhand_and_kinectv2.gazebo.xacro  vs087_with_robotiq.gazebo.xacro  vs087_with_tercero.gazebo.xacro  vs087_with_tercero_and_photoneo.gazebo.xacro  vs087_with_tercero_twin.gazebo.xacro
picking_ws/denso_gazebo/worlds/: cobotta_room.world  denso.world  denso_room.world  denso_room_mini.world
picking_ws/denso_gazebo/worlds/meshes/DAE/LGmonitor/: LGmonitor.dae
picking_ws/denso_gazebo/worlds/meshes/DAE/monitor/: monitor.dae
picking_ws/denso_gazebo/worlds/meshes/DAE/teachingsheet/: teachingsheet.dae
picking_ws/denso_gazebo/worlds/meshes/DAE/worksheet/: worksheet.dae
picking_ws/denso_gazebo/worlds/meshes/STL/monitor/: monitor.stl
picking_ws/denso_gazebo/worlds/meshes/STL/teachingsheet/: teachingsheet.stl
picking_ws/denso_gazebo/worlds/meshes/STL/worksheet/: worksheet.stl
picking_ws/denso_gazebo_control/: CMakeLists.txt  denso_gazebo_control.xml  package.xml
picking_ws/denso_gazebo_control/config/cobotta/cobotta/: cobotta.launch.xml  cobotta_joint_limit.yaml
picking_ws/denso_gazebo_control/config/cobotta/cobotta_with_cobotta_gripper/: cobotta_with_cobotta_gripper.launch.xml  cobotta_with_cobotta_gripper_joint_limit.yaml
picking_ws/denso_gazebo_control/config/vs087/vs087/: vs087.launch.xml  vs087_joint_limit.yaml
picking_ws/denso_gazebo_control/config/vs087/vs087_twin/: vs087_twin.launch.xml
picking_ws/denso_gazebo_control/config/vs087/vs087_with_iai_gripper/: vs087_with_iai_gripper.launch.xml  vs087_with_iai_gripper_joint_limit.yaml
picking_ws/denso_gazebo_control/config/vs087/vs087_with_mhand/: vs087_with_mhand_joint_limit.yaml
picking_ws/denso_gazebo_control/config/vs087/vs087_with_mhand2/: vs087_with_mhand2.launch.xml
picking_ws/denso_gazebo_control/config/vs087/vs087_with_robotiq/: vs087_with_robotiq.launch.xml  vs087_with_robotiq_joint_limit.yaml
picking_ws/denso_gazebo_control/config/vs087/vs087_with_tercero/: vs087_with_tercero.launch.xml  vs087_with_tercero_joint_limit.yaml
picking_ws/denso_gazebo_control/include/denso_gazebo_control/: denso_robot_hw_sim.h  gazebo_grasp_contacts_bridge.h
picking_ws/denso_gazebo_control/launch/: gazebo_grasp_contacts_republisher.launch  gazebo_grasp_contacts_republisher_2.launch
picking_ws/denso_gazebo_control/src/: denso_robot_hw_sim.cpp  gazebo_grasp_contacts_bridge.cpp  gazebo_grasp_contacts_bridge_node.cpp
picking_ws/denso_gazebo_grasp/: CMakeLists.txt  package.xml
picking_ws/denso_gazebo_grasp/config/: grasp_offset.yaml
picking_ws/denso_gazebo_grasp/include/denso_gazebo_grasp/: process_vector.h  tercero_grasp.h
picking_ws/denso_gazebo_grasp/launch/: demo.launch  grasp_point.launch  move_and_grasp.launch  move_and_grasp_box.launch  move_loop.launch  pp_demo.launch  pp_demo_srv.launch  pp_loop.launch  tercero_grasp_server.launch  tercero_grasp_server_2.launch  vs087_with_tercero_move_loop.launch  vs087_with_tercero_pp_demo.launch  vs087_with_tercero_pp_loop.launch
picking_ws/denso_gazebo_grasp/src/: demo.cpp  grasp_point_tf_publisher.cpp  move_and_grasp_box.cpp  move_loop.cpp  pp_demo.cpp  pp_demo_srv.cpp  pp_loop.cpp  process_vector.cpp  tercero_grasp.cpp  tercero_grasp_server.cpp
picking_ws/denso_gazebo_msgs/: CMakeLists.txt  package.xml
picking_ws/denso_gazebo_msgs/msg/: Contact.msg
picking_ws/denso_gazebo_srvs/: CMakeLists.txt  package.xml
picking_ws/denso_gazebo_srvs/srv/: GetJointsValue.srv  SetJointsValue.srv
picking_ws/denso_simulator/: CMakeLists.txt  package.xml
