<?xml version="1.0"?>
<package format="2">
  <name>denso_gazebo</name>
  <version>0.0.0</version>
  <description>The denso_gazebo package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>denso_descriptions</exec_depend>
  <exec_depend>denso_gazebo_control</exec_depend>
  <exec_depend>denso_gazebo_grasp</exec_depend>
  <exec_depend>denso_gazebo_srvs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>mhand_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tercero_gazebo</exec_depend>
  <exec_depend>timed_roslaunch</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>

</package>
