<?xml version="1.0"?>
<package format="2">
  <name>denso_gazebo_srvs</name>
  <version>0.0.0</version>
  <description>The denso_gazebo_srvs package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
